[workspace]
members = [
    "crates/llama-arxiv",
    "crates/llama-pubmed",
    "crates/llama-headers-rs",
    "crates/llama-moonlight-core",
    # Add all other crates
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/llamamoonlight"
authors = ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"]
