[package]
name = "llama-moonlight-cloudflare"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Cloudflare bypass tools for the Llama Moonlight ecosystem"
repository = "https://github.com/yourusername/llama-ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["cloudflare", "bypass", "scraping", "browser", "automation"]
categories = ["web-programming"]

[dependencies]
llama-moonlight-core = { path = "../llama-moonlight/llama-moonlight-core", version = "0.1.0" }
llama-headers-rs = { path = "../llama-headers-rs", version = "0.1.0" }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.9"
lazy_static = "1.4"
rand = "0.8"
base64 = "0.21"
chrono = "0.4"
url = "2.4"
futures = "0.3"
async-trait = "0.1"
bytes = "1.5"
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1.4", features = ["v4"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"
rquickjs = "0.3"
html5ever = "0.26"
select = "0.6"
lru = "0.11"
quick-js = "0.4"

[features]
default = ["standard"]
standard = []
stealth = ["llama-headers-rs/stealth"]
recaptcha = []
hcaptcha = []
proxy = []
advanced = ["proxy", "recaptcha", "hcaptcha"]

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
pretty_assertions = "1.3" 