[package]
name = "llama-moonlight-finance"
version = "0.1.0"
edition = "2021"
authors = ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"]
description = "Financial data and trading integration library for the Llama Moonlight ecosystem"
readme = "README.md"
repository = "https://github.com/llamamoonlight/llama-ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["finance", "trading", "stocks", "cryptocurrency", "market-data"]
categories = ["finance", "api-bindings"]

[dependencies]
# Llama ecosystem dependencies
llama-moonlight-core = { path = "../llama-moonlight-core", version = "0.1.0", optional = true }
llama-moonlight-headers = { path = "../llama-moonlight-headers", version = "0.1.0" }
llama-moonlight-stealth = { path = "../llama-moonlight-stealth", version = "0.1.0", features = ["full"], optional = true }
llama-moonlight-tor = { path = "../llama-moonlight-tor", version = "0.1.0", optional = true }

# Financial data dependencies
yahoo-finance-api = "1.3"
alphavantage-rs = "0.1"
coinmarketcap-rs = "0.4"
binance-rs = { version = "1.3", optional = true }
ftx-rs = { version = "0.4", optional = true }
tradingview-rs = { version = "0.5", optional = true }

# Market visualization dependencies
plotters = { version = "0.3", optional = true }
ta = { version = "0.5", optional = true }

# Web and async dependencies
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"

# Data and processing
rust_decimal = { version = "1.31", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
polars = { version = "0.32", optional = true }
nalgebra = { version = "0.32", optional = true }
statrs = { version = "0.16", optional = true }

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
dotenv = "0.15"
regex = "1.9"
rayon = "1.7"
itertools = "0.11"
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.3"
tokio-test = "0.4"
wiremock = "0.5"
proptest = "1.2"
criterion = "0.5"
fake = { version = "2.6", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
temp-env = "0.3"
test-case = "3.1"

[features]
default = ["standard"]
# Standard features
standard = []
# Market data providers
yahoo = []
alphavantage = []
coinmarketcap = []
# Trading platform integrations
binance = ["binance-rs"]
ftx = ["ftx-rs"]
tradingview = ["tradingview-rs"]
# Analysis tools
technical-analysis = ["ta"]
visualization = ["plotters"]
data-science = ["polars", "nalgebra", "statrs"]
# Stealth and privacy features
stealth = ["llama-moonlight-stealth"]
tor = ["llama-moonlight-tor"]
# Browser automation
browser = ["llama-moonlight-core"]
# Full features
full = [
    "standard", 
    "yahoo", 
    "alphavantage", 
    "coinmarketcap", 
    "binance", 
    "ftx", 
    "tradingview", 
    "technical-analysis", 
    "visualization", 
    "data-science", 
    "stealth", 
    "tor",
    "browser"
]

[[bench]]
name = "data_processing"
harness = false 