[package]
name = "llama-moonlight-headers"
version = "0.1.0"
edition = "2021"
authors = ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"]
description = "Browser header generation for web automation in the Llama Moonlight ecosystem"
repository = "https://github.com/yourusername/llama-ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["http", "headers", "browser", "automation", "web"]
categories = ["web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
lazy_static = "1.4"
regex = "1.9"
chrono = "0.4"
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.4", features = ["v4"] }
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
tokio = { version = "1.32", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
default = ["standard"]
# Standard header generation
standard = []
# More advanced stealth techniques
stealth = []
# Async API support
async = ["dep:tokio", "dep:reqwest"]
# Browser fingerprinting features
fingerprint = []
# All features
full = ["standard", "stealth", "async", "fingerprint"]

[dev-dependencies]
pretty_assertions = "1.3"
tokio-test = { version = "0.4", optional = true } 