[package]
name = "llama-moonlight-proxymaster"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance proxy management system for the Llama Moonlight ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/llamamoonlight"
readme = "README.md"
categories = ["asynchronous", "web-programming"]
keywords = ["proxy", "proxies", "scraper", "api", "rest"]

[dependencies]
# Async runtime
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"

# Web/HTTP 
reqwest = { version = "0.11.18", features = ["json", "socks", "stream", "proxy"] }
warp = "0.3.5"

# Database
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
dotenvy = "0.15.7"
dotenv = "0.15.0"

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Error handling
thiserror = "1.0.40"

# Utilities
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand = "0.8.5"
indicatif = "0.17.3"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.5.0"
mockito = "1.1.0"

[lib]
name = "llama_moonlight_proxymaster"
path = "src/lib.rs"

[[bin]]
name = "llama-moonlight-proxymaster"
path = "src/main.rs" 