[package]
name = "llama-moonlight-reddit"
version = "0.1.0"
edition = "2021"
authors = ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"]
description = "Reddit automation and interaction library for the Llama Moonlight ecosystem"
readme = "README.md"
repository = "https://github.com/llamamoonlight/llama-ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["reddit", "api", "automation", "bot", "scraping"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Llama ecosystem dependencies
llama-moonlight-core = { path = "../llama-moonlight-core", version = "0.1.0", optional = true }
llama-moonlight-headers = { path = "../llama-moonlight-headers", version = "0.1.0" }
llama-moonlight-stealth = { path = "../llama-moonlight-stealth", version = "0.1.0", features = ["full"], optional = true }
llama-moonlight-tor = { path = "../llama-moonlight-tor", version = "0.1.0", optional = true }

# Reddit API and web dependencies
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"

# Async runtime dependencies
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Authentication and security
oauth2 = "4.4"
base64 = "0.21"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Parsing and processing
html5ever = "0.26"
scraper = "0.17"
regex = "1.9"
markdown = "0.3"
linkify = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
dotenv = "0.15"
itertools = "0.11"
uuid = { version = "1.4", features = ["v4"] }
humantime = "2.1"
fake = { version = "2.6", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.3"
tokio-test = "0.4"
wiremock = "0.5"
rand_chacha = "0.3"
temp-env = "0.3"
test-case = "3.1"

[features]
default = ["standard"]
# Standard features
standard = []
# Integration with core browser automation
browser = ["llama-moonlight-core"]
# Stealth features for avoiding detection
stealth = ["llama-moonlight-stealth"]
# Tor integration for anonymous browsing
tor = ["llama-moonlight-tor"]
# Extended API features
api-extended = []
# Mock API responses for testing
mock = ["fake"]
# Moderation tools
moderation = []
# Full features
full = ["standard", "browser", "stealth", "tor", "api-extended", "moderation"] 