[package]
name = "llama-moonlight-rxt"
version = "0.1.0"
edition = "2021"
authors = ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"]
description = "Reactive extensions for browser automation in Llama-Moonlight"
repository = "https://github.com/yourusername/llama-ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["browser", "automation", "reactive", "rxrust", "scraping"]
categories = ["web-programming", "asynchronous"]

[dependencies]
llama-moonlight-core = { path = "../llama-moonlight-core", version = "0.1.0" }
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
rxrust = "1.0.0-beta.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
pin-project = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 