[package]
name = "llama-moonlight-stealth"
version = "0.1.0"
edition = "2021"
authors = ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"]
description = "Advanced stealth features for the Llama Moonlight browser automation framework"
readme = "README.md"
repository = "https://github.com/yourusername/llama-ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["browser", "automation", "stealth", "web", "scraping"]
categories = ["web-programming"]

[dependencies]
# Llama ecosystem dependencies
llama-moonlight-core = { path = "../llama-moonlight-core", version = "0.1.0" }
llama-moonlight-headers = { path = "../llama-moonlight-headers", version = "0.1.0", features = ["stealth", "fingerprint"] }

# External dependencies
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
rand = "0.8"
chrono = "0.4"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"
regex = "1.9"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
uuid = { version = "1.4", features = ["v4"] }

[features]
default = ["standard"]
# Standard stealth features
standard = []
# Advanced stealth techniques
advanced = []
# AI-powered evasion system
ai = []
# Full features set
full = ["standard", "advanced", "ai"]

[dev-dependencies]
pretty_assertions = "1.3"
tokio-test = "0.4" 