[package]
name = "llama-moonlight-testutil"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Testing utilities for Llama-Moonlight browser automation framework"
repository = "https://github.com/yourusername/llama-ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["browser", "automation", "testing", "utilities", "scraping"]
categories = ["web-programming", "development-tools::testing"]

[dependencies]
llama-moonlight-core = { path = "../llama-moonlight-core", version = "0.1.0" }
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_assertions = "1.3"
test-case = "3.1"
mockito = "1.2"
httptest = "0.15"
wiremock = "0.5"
tempfile = "3.8"
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] } 