[package]
name = "llama-moonlight-tor"
version = "0.1.0"
edition = "2021"
authors = ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"]
description = "Tor network integration for the Llama Moonlight browser automation framework"
readme = "README.md"
repository = "https://github.com/yourusername/llama-ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["tor", "browser", "automation", "darkweb", "scraping"]
categories = ["web-programming"]

[dependencies]
# Llama ecosystem dependencies
llama-moonlight-core = { path = "../llama-moonlight-core", version = "0.1.0" }
llama-moonlight-headers = { path = "../llama-moonlight-headers", version = "0.1.0" }
llama-moonlight-stealth = { path = "../llama-moonlight-stealth", version = "0.1.0", features = ["full"] }

# Tor dependencies
arti-client = "0.8.9"
tor-rtcompat = "0.8.9"
tor-dirmgr = "0.12.1"
tor-circmgr = "0.12.0"
tor-config = "0.9.5"
tor-socksproto = "0.6.1"

# Web and async dependencies
reqwest = { version = "0.11", features = ["json", "socks", "cookies"] }
tokio = { version = "1.32", features = ["full"] }
tokio-socks = "0.5"
futures = "0.3"
warp = "0.3"

# Data processing dependencies
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
html5ever = "0.26"

# Utility dependencies
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
regex = "1.9"
url = "2.4"
chrono = "0.4"
rand = "0.8"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
itertools = "0.11"
lazy_static = "1.4"

[dev-dependencies]
pretty_assertions = "1.3"
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.8"

[features]
default = ["standard"]
# Standard features
standard = []
# Integration with external tools
external-tools = []
# Support for search engine aggregation
search-engines = []
# Full features
full = ["standard", "external-tools", "search-engines"] 