[package]
name = "llama-pubmed"
version = "0.1.0"
edition = "2021"
authors = ["Llama Team <team@llama.ai>"]
description = "A command-line tool for downloading scientific papers from PubMed"
repository = "https://github.com/llama/llama-pubmed"
readme = "README.md"
license = "MIT"
keywords = ["pubmed", "science", "papers", "pdf", "downloader"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
scraper = "0.17"
quick-xml = { version = "0.30", features = ["serialize"] }
dirs = "5.0"
pdf = "0.8"
urlencoding = "2.1"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
indicatif = "0.17"
colored = "2.0"
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = "1.3"
tempfile = "3.5"
httpmock = "0.6"
tokio-test = "0.4" 